# sypha

./: .gitignore  LICENSE  NOTICE  README.md  THIRD_PARTY_LICENSES
c/: Makefile  README.md
c/include/syphac/: env.h  opt.h  sypha_env.h  sypha_list.h  sypha_opt.h  syphac.h
c/src/: env.c  opt.c  sypha_env.c  sypha_list.c  sypha_opt.c
c/test/data/: test_0.env
c/test/src/: test_env.cpp  test_list.cpp  test_opt.cpp
cpp/: Makefile  README.md
cpp/include/syphacpp/: sypha.hpp  sypha_env.hpp
cpp/src/: sypha_opt.cpp
cpp/test/src/: test_env.cpp  test_opt.cpp
syphac/: .gitignore  README.md
syphac/include/syphac/: sypha.h  sypha_env.h  sypha_list.h  sypha_opt.h
syphac/src/: sypha_list.c  sypha_opt.c
syphac/test/src/: test_list.cpp  test_main.cpp
syphacpp/include/syphacpp/: sypha_env.hpp  sypha_opt.hpp
syphacpp/test/src/: test_env.cpp
syphapy/: .gitignore  README.md  pyproject.toml
syphapy/syphapy/: processor.py
syphapy/tests/: test_processor.py
tools/backup/: README.md  backup.sh
