[tool.poetry]
name = "syphapy"
version = "0.1.0"
description = "Utility library"
authors = ["David Tuttle <david.p.tuttle17@gmail.com>"]
license = "Apache License Version 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
